# kalada

./: .env.db  .env.kafka  .env.service  .gitignore  .isort.cfg  .pre-commit-config.yaml  config.yaml  docker-compose.local.yml  docker-compose.yml  pyproject.toml
deployment/dockerfiles/: local.dockerfile
kalada/: __init__.py  app.py
kalada/components/: routes.py
kalada/components/currency/: __init__.py  api.py  exceptions.py  model.py  schema.py
kalada/components/currency_pair/: __init__.py  api.py  exceptions.py  model.py  schema.py
kalada/components/currency_pair_rate/: __init__.py  api.py  exceptions.py  mechanism.py  model.py  schema.py
kalada/components/rate_provider/: exceptions.py  model.py
kalada/core/: app.py  exception.py
kalada/core/config/: configurator.py  database.py  env.py  workers.py
kalada/core/database/: client.py  connector.py
kalada/core/integrations/: currencies_iso_4217.py
kalada/core/integrations/base/: __init__.py  http_integration_base.py
kalada/core/integrations/currency_rate/: __init__.py  base.py  utils.py
kalada/core/integrations/currency_rate/providers/: cbr.py  ecb.py
kalada/core/utils/: json.py
kalada/core/workers/: app.py  commands.py  records.py  starters.py
kalada/core/workers/agents/: __init__.py  grab_rates.py
